# TaskMessenger

./: .gitignore  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  IDBManager.cpp  IDBManager.h  MessageDBManager.cpp  MessageDBManager.h  README.md  TaskDBManager.cpp  TaskDBManager.h  Task_Server.h  UserDBManager.cpp  UserDBManager.h  main.cpp  main_task_server.cpp  useful.txt
DB/: .gitignore  CMakeLists.txt  Connection.cpp  Connection.h  DBConnection.cpp  DBConnection.h  IDBManager.cpp  IDBManager.h  IMessageDBManager.h  ITaskDBManager.h  IUserDBManager.h  MessageDBManager.cpp  MessageDBManager.h  TaskDBManager.cpp  TaskDBManager.h  UserDBManager.cpp  UserDBManager.h  main.cpp  tables.h  tests.cpp
client/: .gitignore  CMakeLists.txt  README.md
client/client_lib/: CMakeLists.txt
client/client_lib/include/: IClient.h  client.h
client/client_lib/src/: client.cpp
client/client_lib/tests/: CMakeLists.txt  client_test.cpp
client/model_lib/include/: message.h  task.h  user.h
client/model_lib/src/: message.cpp  task.cpp  user.cpp
client/model_lib/tests/: CMakeLists.txt
client/presenter_lib/include/: ipresenter.h  presenter.h
client/presenter_lib/src/: presenter.cpp
client/presenter_lib/tests/: presenter_test.cpp
client/src/: main.cpp
client/ui_lib/: CMakeLists.txt  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  taskcreatedialog.cpp  taskcreatedialog.h  taskcreatedialog.ui  taskdialog.cpp  taskdialog.h  taskdialog.ui
client/view_lib/: CMakeLists.txt
client/view_lib/include/: iview.h  view.h
client/view_lib/src/: view.cpp
client_lib/: CMakeLists.txt
client_lib/include/: IClient.h  client.h  tsqueue.h
client_lib/src/: client.cpp
mes_server/: .gitignore  CMakeLists.txt  DBConnection.h  MessageDBManager.cpp  MessageDBManager.h  UserDBManager.h  main.cpp  main.h  main_mes_server.cpp  server.cpp  server.h
mes_server/Connection/: Connection.cpp  Connection.h
mes_server/Main/: main.h
mes_server/Server/: Server.cpp  Server.h  server.cpp  server.h
model_lib/: CMakeLists.txt
model_lib/include/: message.h  task.h  user.h
model_lib/src/: message.cpp  task.cpp  user.cpp
model_lib/tests/: model_test.cpp
presenter_lib/: CMakeLists.txt
presenter_lib/include/: ipresenter.h  presenter.h
presenter_lib/src/: presenter.cpp
presenter_lib/tests/: CMakeLists.txt  presenter_test.cpp
src/: main.cpp
task_server/: .gitignore  CMakeLists.txt  DBConnection.h  IUserDBManager.h  TaskDBManager.h  main_task_server.cpp  tables.h
ui_lib/: login.cpp  login.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  taskcreatedialog.cpp  taskcreatedialog.h  taskcreatedialog.ui  taskdialog.cpp  taskdialog.h
view_lib/: CMakeLists.txt
view_lib/include/: iview.h  view.h
view_lib/src/: view.cpp
view_lib/tests/: CMakeLists.txt  view_test.cpp
